// Fitxer de definició proto per l'entitat EmoMood.
// createdAt: 24/09/23 dl. JIQ

syntax = "proto3";

package proto;

import "global.proto";
import "usr_entities.proto";

option go_package = "./";

// Definició d'un estat d'ànim.
message EmoMood {
  BaseEntity      base_entity = 1;
  string          name_key = 2;
  optional string desc_key = 3;
  int32           value = 4;
}

message EmoMoods {
  optional GbError error = 1;
  repeated EmoMood moods = 2;
}
